definition of [h]-simplifiable set moved

--- a/sumset_cover.tex
+++ b/sumset_cover.tex
@@ -78,9 +78,7 @@
 			\end{alertblock}
 			
 			\pause
-			\begin{block}{Definicja}
-				Zbiór $ S \subset \N^{+} $ jest \emph{[h]-upraszczalny}, jeśli $ rk_{h}(S) < |S| $
-			\end{block}
+			W tej prezentacji zajmiemy się przypadkiem $ h=2 $.
 		\end{frame}
 		
 	\subsection{Przykłady}
@@ -151,8 +149,12 @@
 		
 	\subsection{NP-trudność}
 		\begin{frame}{Nie miejmy złudzeń...}
+			\begin{block}{Definicja}
+				Zbiór $ S \subset \N^{+} $ jest \emph{[h]-upraszczalny}, jeśli $ rk_{h}(S) < |S| $
+			\end{block}
+			
 			\begin{exampleblock}{Fakt}
-				Stwierdzenie, czy dany zbiór $ S \subset \N^{+} $ jest [2]-upraszczalny $ \left( rk_{h}(S) < |S| \right) $ jest problemem NP-trudnym.
+				Stwierdzenie, czy dany zbiór $ S \subset \N^{+} $ jest [2]-upraszczalny jest problemem NP-trudnym.
 			\end{exampleblock}
 		\end{frame}
 		
